double border fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body {
 }
 
 /* Header */
-.header {
+.header.container {
   border-bottom: 1px solid var(--header-border-color);
 }
 
